[package]
name = "udp_to_s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.14"
#aws-sdk-s3 = "1.69.0"
aws-sdk-s3 = { version = "1.69.0", features = ["behavior-version-latest"] }
aws-types = "1.3.4"
crossbeam-queue = "0.3"

clap = { version = "4.3.3", features = ["derive"] }
pcap = "0.10.0"
tokio = { version = "1.34.0", features = ["full"] }
notify = "5.1.0"
log = "0.4.25"
chrono = "0.4.39"
socket2 = "0.5.8"
get_if_addrs = "0.5.3"
aws-smithy-runtime-api = "1.7.3"
